# terrainosaurus

./: .gitignore  .gitmodules  ChangeLog  NEWS  SConstruct  build.bat  configure.ac
terrainosaurus/: .cvsignore  AUTHORS  BUGS  Doxyfile  Makefile.am  README  SConstruct  TODO  configure.ac  terrainosaurus.kdevelop  terrainosaurus.vcproj
terrainosaurus/data/: analyze_all  csv_tools.pm  diagonal.map  download_file.pl  full_classified_samples  half_classified_samples  make_csv.pl  separate_samples  slurp_filenames.pl  test.map  test.ttl  thirds.map
terrainosaurus/db/: uuid
terrainosaurus/db/revprops/0/: 0
terrainosaurus/doc/: pics still todo.txt  todo.txt
terrainosaurus/doc/Master's Thesis/: Keyser Final Edits.rtf  actual.txt  changes  color-replace.xsl  fop.conf  keyser critique.txt  project.properties  refd.txt  sorted.txt  sysconfig.properties  todo
terrainosaurus/doc/Master's Thesis/Proposal/: Makefile  References.xml  References2HTML.xsl  Thesis Proposal.html  Thesis Proposal.xml.bak
terrainosaurus/doc/Master's Thesis/fonts/: arial.xml  arialbd.xml  arialbi.xml  ariali.xml  ariblk.xml  comic.xml  comicbd.xml  cour.xml  courbd.xml  courbi.xml  couri.xml  estre.xml  framd.xml  framdit.xml  gautami.xml  georgia.xml  georgiab.xml  georgiai.xml  georgiaz.xml  impact.xml  kartika.xml  l_10646.xml  latha.xml  lsans.xml  lsansd.xml  lsansdi.xml  lsansi.xml  lucon.xml  mangal.xml  micross.xml  mvboli.xml  opens___.xml  pala.xml  palab.xml  palabi.xml  palai.xml  raavi.xml  rage.xml  shruti.xml  sylfaen.xml  (+27 more)
terrainosaurus/doc/Master's Thesis/src/: background.xml  discussion.xml  implementation.xml  introduction.xml  methods.xml  motivation.xml  references.xml  thesis.xml
terrainosaurus/doc/Master's Thesis/temp/: thesis-final.xml  thesis-merged.xml  thesis.fo
terrainosaurus/doc/Presentations/: Terrainosaurus Defense.ppt  Terrainosaurus GECCO 2005.ppt  Terrainosaurus SRW 2005.ppt
terrainosaurus/doc/pix/: Perspective Algorithm.xcf  Skill Chart.xcf
terrainosaurus/src/: .cvsignore  DEMInterpreter.cpp  DEMInterpreter.hpp  DEMTest.cpp  DirectElevationModelHandler.cpp  ElevationMap.cpp  ElevationMap.hpp  GLUTMapEditor.cpp  Makefile  Makefile.am  Map.cpp  Map.hpp  MapEditWidget.hpp  MapEditorWidget.cpp  MapEditorWidget.hpp  MapExplorer.cpp  MapExplorer.hpp  MapExplorerWidget.cpp  MapExplorerWidget.hpp  MapSelectWidget.cpp  MapSelectWidget.hpp  MapSelection.cpp  MapSelection.hpp  MapView.cpp  MapView.hpp  PlanarGrid.cpp  PlanarGrid.hpp  RotateWidget.hpp  ScaleWidget.hpp  TerrainDescriptor.hpp  TerrainosaurusComponent.cpp  TerrainosaurusComponent.hpp  TerrainosaurusRenderer.cpp  TerrainosaurusRenderer.hpp  TopologyWidget.cpp  TopologyWidget.hpp  TranslateWidget.cpp  TranslateWidget.hpp  terrainosaurus-common.h
terrainosaurus/src/data/: ElevationMap.cpp  ElevationMap.hpp  Map.cpp  Map.hpp  MeshSelection.cpp  MeshSelection.hpp  TerrainChunk.hpp  TerrainLibrary.cpp  TerrainLibrary.hpp  TerrainPatch.hpp  TerrainSample.cpp  TerrainSample.hpp  TerrainSeam.hpp  TerrainType.cpp  TerrainType.hpp  Terrainscape.hpp
terrainosaurus/src/genetics/: Chromosome.h  GA.h  Pyramid.h  RandomLine.h  TerrainChromosome.cpp  TerrainChromosome.hpp  terrain-operations.cpp  terrain-operations.hpp
terrainosaurus/src/io/: .cvsignore  DEM.g  DEMInterpreter.hpp  DirectElevationModelHandler.cpp  Map.g  MapParser-functions.cpp  TerrainLibrary.g  TerrainLibraryParser-functions.cpp  terrainosaurus-iostream.cpp
terrainosaurus/src/rendering/: MapRasterization.cpp  MapRasterization.hpp  PolygonTessellator.cpp  TerrainosaurusRenderer.cpp  terrainosaurus-rendering_functors.hpp
terrainosaurus/src/terrainosaurus/: MapExplorer.cpp  MapExplorer.hpp  PlanarGrid.cpp  PlanarGrid.hpp  TerrainViewer.cpp  TerrainosaurusApplication.cpp  TerrainosaurusApplication.hpp  TerrainosaurusComponent.cpp  TerrainosaurusComponent.hpp  terrainosaurus-common.h
terrainosaurus/src/terrainosaurus/data/: Map.cpp  Map.hpp  MapRasterization.cpp  MapRasterization.hpp  MeshSelection.cpp  MeshSelection.hpp  TerrainLOD.cpp  TerrainLOD.hpp  TerrainLibrary.cpp  TerrainLibrary.hpp  TerrainPatch.hpp  TerrainSample.cpp  TerrainSample.hpp  TerrainSeam.cpp  TerrainSeam.hpp  TerrainType.cpp  TerrainType.hpp
terrainosaurus/src/terrainosaurus/genetics/: BoundaryGA.hpp  Chromosome.h  GA.h  HeightfieldGA.cpp  HeightfieldGA.hpp  Pyramid.h  RandomLine.h  SimilarityGA.cpp  SimilarityGA.hpp  TerrainChromosome.cpp  TerrainChromosome.hpp  terrain-ga.cpp  terrain-ga.hpp  terrain-operations.cpp  terrain-operations.hpp
terrainosaurus/src/terrainosaurus/io/: CommonGrammar.g  CommonLexer.cpp  CommonLexer.hpp  CommonParser.cpp  CommonParser.hpp  CommonTokenTypes.hpp  CommonTokenTypes.txt  Config.g  ConfigLexer.cpp  ConfigLexer.hpp  ConfigParser.cpp  ConfigParser.hpp  ConfigTokenTypes.hpp  ConfigTokenTypes.txt  DEMInterpreter.cpp  DEMInterpreter.hpp  INIParser.cpp  INIParser.hpp  Map.g  MapLexer.cpp  MapLexer.hpp  MapParser-functions.cpp  MapParser.cpp  MapParser.hpp  MapTokenTypes.hpp  MapTokenTypes.txt  TerrainLibrary.g  TerrainLibraryLexer.cpp  TerrainLibraryLexer.hpp  TerrainLibraryParser-functions.cpp  TerrainLibraryParser.cpp  TerrainLibraryParser.hpp  TerrainLibraryTokenTypes.hpp  TerrainLibraryTokenTypes.txt  expandedConfig.g  expandedMap.g  expandedTerrainLibrary.g  terrainosaurus-iostream.cpp  terrainosaurus-iostream.hpp
terrainosaurus/src/terrainosaurus/rendering/: CameraProjection.hpp  ChromosomeRendering.cpp  ChromosomeRendering.hpp  GeneShapeRendering.cpp  GeneShapeRendering.hpp  GridRendering.cpp  GridRendering.hpp  HeightfieldRendering.cpp  HeightfieldRendering.hpp  MapRendering.cpp  MapRendering.hpp  PolygonTessellator.cpp  PolygonTessellator.hpp  RenderTerrainPatch.cpp  SkyBox.hpp  TerrainSampleRendering.cpp  TerrainSampleRendering.hpp  (+2 more)
terrainosaurus/src/test/: DEMTest.cpp  analyze_dem.cpp  verify_dem.cpp
terrainosaurus/src/ui/: AddFaceWidget.cpp  AddFaceWidget.hpp  CameraFlyWidget.cpp  CameraFlyWidget.hpp  CameraNavigationWidget.hpp  MapEditWidget.cpp  MapEditWidget.hpp  MapExplorerWidget.cpp  MapExplorerWidget.hpp  ScaleWidget.hpp
(+219 files in other folders)
