## Makefile.am -- Process this file with automake to generate Makefile.in

## Import rules to manually rebuild the source file catalog
include $(top_srcdir)/ac_tools/automake/src-catalog.rules

## Incorporate manually-invoked rules for regenerating and cleaning things
include $(top_srcdir)/ac_tools/automake/manual.rules

## All of the source code lives in the src directory
SUBDIRS = src
